vcluster_versioned_docs/version-0.36.0/configure/vcluster-yaml/networking/replicate-services.mdx
---
title: Replicate networking services
sidebar_label: replicateServices
sidebar_position: 1
sidebar_class_name: host-nodes
---

import ReplicateServices from '../../../_partials/config/networking/replicateServices.mdx'
import TenancySupport from '../../../_fragments/tenancy-support.mdx';

<TenancySupport hostNodes="true" />

With open source <GlossaryTerm term="vcluster">vCluster</GlossaryTerm>, you need to replicate services between the control plane cluster and <GlossaryTerm term="tenant-cluster">tenant cluster</GlossaryTerm>.

## Control plane cluster to tenant cluster

In this example, you map a service `my-host-service` in the namespace `my-host-namespace` to the tenant cluster service `my-virtual-service` in the tenant cluster namespace `my-virtual-namespace`.

```yaml
networking:
  replicateServices:
    fromHost:
    - from: my-host-namespace/my-host-service
      to: my-virtual-namespace/my-virtual-service
```

vCluster replicates the service in the tenant cluster, with the tenant cluster service pointing to the service running in the <GlossaryTerm term="control-plane-cluster">control plane cluster</GlossaryTerm>. Pods inside the tenant cluster can access the host service using `my-virtual-service.my-virtual-namespace` syntax. For example, if you use cURL, the command is `curl http://my-virtual-service.my-virtual-namespace`.

In the above example, when you remove the `my-host-namespace/my-host-service` service replication config from `networking.replicateServices.fromHost`,
the tenant cluster service `my-virtual-namespace/my-virtual-service` is automatically deleted from the tenant cluster.

:::note Kubelet image pulls aren't covered by this feature
`fromHost` creates a tenant cluster Service that CoreDNS resolves. A process inside a tenant pod, such as an application calling a private registry directly, can reach the replicated Service by name. It doesn't help the kubelet pull container images referenced in a pod's `image:` field. On shared nodes, the container runtime resolves image references using the underlying node's DNS configuration rather than the tenant cluster's CoreDNS. See [Use a control plane cluster registry from a tenant cluster](../../../learn-how-to/in-cluster-registry.mdx) for how to pull images from an in-cluster registry.
:::

## Tenant cluster to control plane cluster

You can also map a tenant cluster service to a <GlossaryTerm term="control-plane">control plane</GlossaryTerm> cluster service. This is especially useful if you want to expose an application that runs inside the tenant cluster to other workloads running in the control plane cluster, which makes it easier to share services across vCluster instances.

In this example, you map the virtual service `my-virtual-service` in the namespace `my-virtual-namespace` to the host namespace service `my-host-service`

```yaml
networking:
  replicateServices:
    toHost:
    - from: my-virtual-namespace/my-virtual-service
      to: my-host-service
```

With this configuration, vCluster manages a service called `my-host-service` inside the namespace where the vCluster workloads are synced, which points to the virtual service `my-virtual-service` in namespace `my-virtual-namespace` inside the tenant cluster. Pods in the control plane cluster are able to access the virtual service by calling the host service. If you use cURL, the command based on the preceding example is `curl http://my-host-service`.

In the above example, when you remove the `my-virtual-namespace/my-virtual-service` service replication config from
`networking.replicateServices.toHost`, the control plane cluster service `my-host-service` is not automatically deleted from
the control plane cluster, so you need to delete it manually, if you don't want to keep it in the control plane cluster.

## Network policies

If you are using [network policies](../policies/network-policy.mdx), traffic to or from the replicated services must be allowed.

```yaml title="vcluster.yaml"
policies:
  networkPolicy:
    workload:
      egress:
      - to:
        # Example allowing vcluster workload traffic to all pods in the my-host-namespace namespace.
        # Depending on your use case, a more restrictive pod selector may be used.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-host-namespace

      ingress:
      - from:
        # Example allowing vcluster workload traffic from all pods in the my-host-namespace namespace.
        # Depending on your use case, a more restrictive pod selector may be used.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: my-host-namespace

```

## Config reference

<ReplicateServices/>
